Switched to using a nice select2 combobox with text input field for the country selection. Not sure how to test that this guy is mandatory, though.

--- a/socrates/lib/members/views/userinfoform.jade
+++ b/socrates/lib/members/views/userinfoform.jade
@@ -1,6 +1,6 @@
 include  ../../../views/formComponents
 
-mixin memberinfoform(member, subscriber, newmember_text)
+mixin memberinfoform(member, subscriber, newmember_text, allCountries)
   +hidden('id', member.id())
   +hidden('previousNickname', member.nickname())
   +hidden('previousEmail', accessrights.isRegistered() ? member.email() : '')
@@ -29,7 +29,8 @@ mixin memberinfoform(member, subscriber, newmember_text)
           +text('lastname', 'Last name', member.lastname())
         .col-sm-12
           if subscriber
-            +text('country', 'Country of Residence', subscriber.country())
+            +singleselect('country', 'Country of Residence', subscriber.country(), 'Select your country', allCountries)
+
     .col-sm-6
       +text('email', 'E-Mail', member.email())
       +twitter('twitter', 'Twitter', member.twitter())
