We can now change the waitinglist participants' desired room types in the management tables.

--- a/socrates/lib/notifications/jade/changedWaitinglist.jade
+++ b/socrates/lib/notifications/jade/changedWaitinglist.jade
@@ -10,7 +10,7 @@ html
       b #{bookingdetails.map(x => x.room).join(', ')}
       | .
     p We will inform you as soon as a space is available. You can then choose the number of nights you want to stay.
-    p You can review and modify your waitinglist data at #{' '}
+    p You can review and modify your participant data at #{' '}
       a(href='#{url}/members/edit') #{url}/members/edit
 
     p The organisers
