--- a/socrates/lib/members/views/userinfoform.jade
+++ b/socrates/lib/members/views/userinfoform.jade
@@ -28,8 +28,7 @@ mixin memberinfoform(member, subscriber, newmember_text, allCountries)
         .col-sm-6
           +text('lastname', 'Last name', member.lastname())
         .col-sm-12
-          if subscriber
-            +singleselect('country', 'Country of Residence', subscriber.country(), 'Select your country', allCountries)
+          +singleselect('country', 'Country of Residence', subscriber ? subscriber.country() : null, 'Select your country', allCountries)
 
     .col-sm-6
       +text('email', 'E-Mail', member.email())
