We should rather not have a dot in the other modal's id, either...

--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -91,7 +91,7 @@ mixin removeParticipantWithModal(roomType, participantNick)
   button.btn.btn-danger(data-toggle='modal', data-target='#' + theID): i.fa.fa-trash-o.fa-fw
 
 mixin removeWaitinglistMemberWithModal(roomType, waitinglistNick)
-  -var theID = 'reallyRemoveWaitinglistMember' + waitinglistNick.replace(/\s/g, '').replace(/@/g, 'AT')
+  -var theID = 'reallyRemoveWaitinglistMember' + waitinglistNick.replace(/\s/g, '').replace(/@/g, 'AT').replace(/\./g, 'DOT')
   .modal.fade(id=theID, tabindex='-1')
     .modal-dialog
       .modal-content
