Add the dates and location for SoCraTes BE 2016.

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -95,8 +95,7 @@ block content
               h5
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
                 br
-                small &nbsp
-                // TODO update when they have new dates: small 22 - 25 Oct 2015, Nieuwpoort
+                small 15 - 18 Sept 2016, Tournai
 
 
 
