Added SoCraTes Chile to the list of partner conferences.

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -88,6 +88,11 @@ block content
                 small 2 - 5 June 2016, Dorking
             .col-sm-6
               h5
+                +extlink('https://www.socrates-conference.cl/', 'SoCraTes Chile')
+                br
+                small 1 July 2016, Santiago de Chile
+            .col-sm-6
+              h5
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
                 br
                 small 15 - 18 Sept 2016, Tournai
