fix typo in jade für registration mail

--- a/socrates/lib/notifications/jade/registrationConfirmation.jade
+++ b/socrates/lib/notifications/jade/registrationConfirmation.jade
@@ -40,8 +40,8 @@ html
     p You will receive a billable receipt during the event.
 
     p
-      | If at any point in time you realize that you can't make it for some reason, please tell us
-      b as soon as possible
+      | If at any point in time you realize that you can't make it for some reason, please tell us #{' '}
+      b as soon as possible #{' '}
       | so we can give the spot to the next person on the waitinglist.
 
     p If you do not attend SoCraTes Conference without notifying us in advance, the hotel will send you an invoice and charge you for one night!
