Updated the mail address for all things registration.

--- a/socrates/lib/members/views/resignBanner.jade
+++ b/socrates/lib/members/views/resignBanner.jade
@@ -5,7 +5,7 @@ mixin resignBanner(registration)
         .alert.alert-warning
           p.large-text
             b Can't make it to SoCraTes? #{''} &ndash; #{''}
-            a(href='mailto:info@softwerkskammer.org') Please tell us
+            a(href='mailto:registration@socrates-conference.de') Please tell us
             | #{''} so that we can release your #{''}
             if registration.alreadyRegistered
               | participant spot!
