change email address for notifying organisers of room changes

--- a/socrates/lib/members/views/get.jade
+++ b/socrates/lib/members/views/get.jade
@@ -46,7 +46,7 @@ block content
             | You do not have a roommate yet.
             p
             | The following participants are looking for a roommate as well. If you would like to share a room with one of them, please discuss this with them :-)#{' '}
-            a(href='mailto:info@softwerkskammer.org') When you both agree, tell us.
+            a(href='mailto:registration@socrates-conference.de') When you both agree, tell us.
             | #{' '}Otherwise, we will match you up at random.
             p
             +memberlist(potentialRoommates)
