add new Partner Conference: JS CraftCamp

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -107,6 +107,12 @@ block content
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
                 small 27 - 30 Oct 2016, Rochegude
+            .col-sm-6
+              h5
+                +extlink('http://jscraftcamp.org', 'JS CraftCamp')
+                br
+                small 8 - 9 Oct 2016, Munich, Germany
+
 
 
 
