add partner conference 'JS CraftCamp' at correct position

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -104,9 +104,15 @@ block content
                 small 15 - 18 Sept 2016, Tournai
             .col-sm-6
               h5
+                +extlink('http://jscraftcamp.org', 'JS CraftCamp')
+                br
+                small 8 - 9 Oct 2016, Munich, Germany
+            .col-sm-6
+              h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
                 small 27 - 30 Oct 2016, Rochegude
+
 
 
 
